--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook-duplicate.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook-duplicate.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook-dev
+  name: guestbook-dev1
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
