--- a/bootstrap/clusters-apps-appset1.yaml
+++ b/bootstrap/clusters-apps-appset1.yaml
@@ -16,7 +16,7 @@ spec:
           values: ['true']
   template:
     metadata:
-      name: 'apps-{{name}}'
+      name: 'apps-{{name}}-1'
     spec:
       project: default
       source:
