--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_17.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_17.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_17
+  name: guestbook17
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_17
+    namespace: guestbook17
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
