--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_35.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_35.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_35
+  name: guestbook35
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_35
+    namespace: guestbook35
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
