--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_37.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_37.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_37
+  name: guestbook37
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_37
+    namespace: guestbook37
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
