--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_40.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_40.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_40
+  name: guestbook40
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_40
+    namespace: guestbook40
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
