--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_42.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_42.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_42
+  name: guestbook42
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_42
+    namespace: guestbook42
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
