--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_66.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_66.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_66
+  name: guestbook66
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_66
+    namespace: guestbook66
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
