--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_73.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_73.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_73
+  name: guestbook73
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_73
+    namespace: guestbook73
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
