--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_78.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_78.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_78
+  name: guestbook78
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_78
+    namespace: guestbook78
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
