--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_80.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_80.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_80
+  name: guestbook80
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_80
+    namespace: guestbook80
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
