--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_81.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_81.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_81
+  name: guestbook81
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_81
+    namespace: guestbook81
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
