--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_101.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_101.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_101
+  name: guestbook101
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_101
+    namespace: guestbook101
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
