--- a/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_106.yaml
+++ b/clusters/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_106.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_106
+  name: guestbook106
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_106
+    namespace: guestbook106
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
