--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_115.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_115.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_115
+  name: guestbook115
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_115
+    namespace: guestbook115
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
