--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_121.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_121.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_121
+  name: guestbook121
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_121
+    namespace: guestbook121
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
