--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_124.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_124.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_124
+  name: guestbook124
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_124
+    namespace: guestbook124
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
