--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_125.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_125.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_125
+  name: guestbook125
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_125
+    namespace: guestbook125
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
