--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_131.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_131.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_131
+  name: guestbook131
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_131
+    namespace: guestbook131
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
