--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_135.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_135.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_135
+  name: guestbook135
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_135
+    namespace: guestbook135
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
