--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_159.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_159.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_159
+  name: guestbook159
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_159
+    namespace: guestbook159
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
