--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_166.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_166.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_166
+  name: guestbook166
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_166
+    namespace: guestbook166
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
