--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_178.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_178.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_178
+  name: guestbook178
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_178
+    namespace: guestbook178
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
