--- a/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_181.yaml
+++ b/clusters1/zuscu-d006-b207-aks-d1-atldp/apps/guestbook_181.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook_181
+  name: guestbook181
 spec:
   destination:
     name: zuscu-d006-b207-aks-d1-atldp
-    namespace: guestbook_181
+    namespace: guestbook181
   source:
     path: guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps/
